
[TestListSecrets/List_secrets_of_a_user - 1]
[]*goph.Secret{
    &goph.Secret{
        state:         impl.MessageState{},
        sizeCache:     0,
        unknownFields: nil,
        Id:            "7728154c-9400-4f1b-a2a3-01deb83ece05",
        Name:          "my-secret",
        Kind:          0,
        Metadata:      nil,
    },
    &goph.Secret{
        state:         impl.MessageState{},
        sizeCache:     0,
        unknownFields: nil,
        Id:            "df566e25-43a5-4c34-9123-3931fb809b45",
        Name:          "my-secretex",
        Kind:          1,
        Metadata:      {0x65, 0x6e, 0x63, 0x72, 0x79, 0x70, 0x74, 0x65, 0x64, 0x20, 0x65, 0x78, 0x74, 0x72, 0x61, 0x20, 0x64, 0x61, 0x74, 0x61},
    },
}
---

[TestListSecrets/List_secrets_when_user_has_no_secrets - 1]
[]*goph.Secret(nil)
---

[TestGetSecret/Get_secret - 1]
&goph.Secret{
    state:         impl.MessageState{},
    sizeCache:     0,
    unknownFields: nil,
    Id:            "df566e25-43a5-4c34-9123-3931fb809b45",
    Name:          "my-secret",
    Kind:          1,
    Metadata:      {0x65, 0x6e, 0x63, 0x72, 0x79, 0x70, 0x74, 0x65, 0x64, 0x20, 0x65, 0x78, 0x74, 0x72, 0x61, 0x20, 0x64, 0x61, 0x74, 0x61},
}
---

[TestGetSecret/Get_secret_without_metadata - 1]
&goph.Secret{
    state:         impl.MessageState{},
    sizeCache:     0,
    unknownFields: nil,
    Id:            "df566e25-43a5-4c34-9123-3931fb809b45",
    Name:          "my-secret",
    Kind:          1,
    Metadata:      {0x65, 0x6e, 0x63, 0x72, 0x79, 0x70, 0x74, 0x65, 0x64, 0x20, 0x65, 0x78, 0x74, 0x72, 0x61, 0x20, 0x64, 0x61, 0x74, 0x61},
}
---
